--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha --recursive --exit"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "chai": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "cookies": "^0.8.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.3.0",
+    "mockgoose": "^8.0.4",
     "mongoose": "^5.11.17",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "uuid": "^8.3.2"
+    "supertest": "^6.1.3",
+    "uuid": "^8.3.2",
+    "validator": "^13.5.2"
   }
 }
