--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "cookies": "^0.8.0",
     "debug": "~2.6.9",
